@@ -8,8 +8,9 @@ New:
 
 Changes:
 * superClass based on polygons now considers only pixels which have their center coordinate within a polygon  
+* rasterCVA now returns angles from 0 to 360° instead of 0:45 by quadrant
 
-Fixes: 
+Fixes:
 * superClass failed when neither valData or trainPartition was specified. regression introduced in 0.1.3 (reported by Anna Stephani)
 * spectralIndices valid value range of EVI/EVI2 now [-1,1]
 * radCor returned smallest integer instead of NA for some NA pixels
